--- a/src/components/nav/navStyle.css
+++ b/src/components/nav/navStyle.css
@@ -1,10 +1,22 @@
 .nav-cnt {
+  display: none;
+}
+/*mobile design*/
+.nav-mobile-view {
   display: flex;
-  align-items: center;
-  justify-content: center;
+  justify-content: space-between;
+  padding: 40px;
+  position: relative;
 }
 
-.nav-logo-cnt {
+.burgerBtn-cnt {
   display: flex;
-  gap: 8px;
+  justify-content: flex-end;
+}
+
+.nav-mobileBtn-cnt {
+  position: absolute;
+  top: 90px;
+  display: flex;
+  flex-direction: column;
 }
