--- a/src/components/nav/navStyle.css
+++ b/src/components/nav/navStyle.css
@@ -82,6 +82,7 @@
   .nav-cnt {
     display: flex;
     justify-content: center;
+    align-items: center;
     padding: 40px;
     gap: 18px;
   }
@@ -93,7 +94,7 @@
   }
   .nav-btns-cnt {
     display: flex;
-    gap: 12px;
+    gap: 19px;
   }
   .nav-btns {
     border: none;
@@ -116,6 +117,16 @@
   .nav-logo-cnt {
     font-size: 30px;
     font-weight: 900;
+    color: aliceblue;
+  }
+  .nav-2ndBtns-cnt {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+  }
+  .nav-2ndBtn {
+    background-color: transparent;
+    border: none;
     color: aliceblue;
   }
 }
