--- a/src/components/searchBar/searchBarStyle.css
+++ b/src/components/searchBar/searchBarStyle.css
@@ -1,4 +1,31 @@
 .searchBar-cnt {
   display: flex;
   justify-content: center;
+  align-items: center;
+}
+
+.search-form {
+  display: flex;
+  align-items: center;
+}
+
+.search-bar {
+  width: 980px;
+  height: 50px;
+  background-color: aliceblue;
+  padding-left: 17px;
+  font-size: 19px;
+}
+
+.search-btn {
+  width: 50px;
+  height: 50px;
+  color: aliceblue;
+  border: none;
+  background-color: transparent;
+  background-image: linear-gradient(
+    to right,
+    hsl(249, 75%, 63%),
+    hsl(331, 83%, 45%)
+  );
 }
