--- a/src/pages/detailsPage/tendingDetails/trendingDtlsStyle.css
+++ b/src/pages/detailsPage/tendingDetails/trendingDtlsStyle.css
@@ -10,12 +10,18 @@
   position: relative;
 }
 
-.trndDtlBtn {
-  position: absolute;
-  top: 142px;
-  border: none;
-  background-color: transparent;
-  font-size: 45px;
-  color: rgb(2, 50, 2);
-  cursor: pointer;
+@media screen and (min-width: 850px) {
+  .trndDtl-cnt {
+    display: flex;
+    justify-content: center;
+  }
+
+  .trndDtl-card-cnt {
+    display: flex;
+    width: 1050px;
+    justify-content: center;
+    flex-wrap: wrap;
+    padding-top: 20px;
+    position: relative;
+  }
 }
