--- a/src/components/cardComp/cardStyle.css
+++ b/src/components/cardComp/cardStyle.css
@@ -4,3 +4,12 @@
   padding: 10px;
   border-radius: 17px;
 }
+
+@media screen and (min-width: 850px) {
+  .trending-gifs {
+    width: 210px;
+    height: 150px;
+    padding: 10px;
+    border-radius: 17px;
+  }
+}
