--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,6 @@
 }
 @media screen and (min-width: 850px) {
   * {
-    background-color: rgb(42, 41, 41);
+    background-color: hsl(233, 57%, 5%);
   }
 }
