--- a/src/components/trendingComp/trendingStyle.css
+++ b/src/components/trendingComp/trendingStyle.css
@@ -22,7 +22,7 @@
   background-color: transparent;
   font-size: 25px;
   border: none;
-  color: rgb(1, 38, 38);
+  color: hsl(227, 89%, 15%);
   cursor: pointer;
 }
 
