--- a/src/components/emojiComp/emojiCompStyle.css
+++ b/src/components/emojiComp/emojiCompStyle.css
@@ -11,6 +11,10 @@
   overflow-y: hidden;
 }
 
+.emojiCompCard-cnt::-webkit-scrollbar {
+  display: none;
+}
+
 .emojiBtn {
   display: flex;
   align-items: center;
