--- a/src/components/trendingComp/trendingStyle.css
+++ b/src/components/trendingComp/trendingStyle.css
@@ -11,6 +11,10 @@
   overflow-y: hidden;
 }
 
+.trendingCard-cnt::-webkit-scrollbar {
+  display: none;
+}
+
 .trending-cnt::-webkit-scrollbar {
   overflow: hidden;
 }
