small changes made

--- a/src/components/searchBar/searchBarStyle.css
+++ b/src/components/searchBar/searchBarStyle.css
@@ -57,6 +57,9 @@
     font-family: 'Playfair Display', serif;
     font-weight: 500;
   }
+  .notOk {
+    border: 6px solid tomato;
+  }
 
   .search-btn {
     border: none;
